# AoC_2023

./: README.md  pyproject.toml  setup.sh
.github/workflows/: disable_download.yml  download_input.yml  main.yml
Day_01/: 01_Trebuchet_1.py  01_Trebuchet_2.py
Day_02/: 02_Cube_Conundrum_1.py  02_Cube_Conundrum_2.py
Day_03/: 03_Gear_Ratios_1.py  03_Gear_Ratios_2.py
Day_04/: 04_Scratchcards_1.py  04_Scratchcards_2.py
Day_05/: 05_Fertilizer_1.py  05_Fertilizer_2.py
Day_06/: 06_WaitForIt_1.py  06_WaitForIt_2.py
Day_07/: 07_Camel_Cards_1.py  07_Camel_Cards_2.py
Day_08/: 08_Haunted_Wasteland_1.py  08_Haunted_Wasteland_2.py
Day_09/: 09_Mirage_Maintenance_1.py  09_Mirage_Maintenance_2.py
Day_10/: 10_Pipe_Maze_1.py  10_Pipe_Maze_2.py
Day_11/: 11_Cosmic_Expansion_1.py  11_Cosmic_Expansion_2.py
Day_12/: 12_Hot_Springs_1.py  12_Hot_Springs_2.py
Day_13/: 13_Point_of_Incidence_1.py  13_Point_of_Incidence_2.py
Day_14/: 14_Parabolic_Reflector_Dish_1.py  14_Parabolic_Reflector_Dish_2.py
Day_15/: 15_Lens_Library_1.py  15_Lens_Library_2.py
Day_16/: 16_Lava_1.py  16_Lava_2.py
Day_17/: 17_Clumsy_Crucible_1.py
Day_18/: 18_Lavaduct_Lagoon_1.py
Day_19/: 19_Aplenty_1.py  19_Aplenty_2.py
Day_20/: 20_Pulse_Propagation_1.py  20_Pulse_Propagation_2.py
